deps/crates/vendor/rustversion/tests/ui/bad-bound.rs
#[rustversion::since(stable)]
struct S;

#[rustversion::any(since(stable))]
struct S;

fn main() {}
